# proto_sr_agents

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  api_guide_for_frontend.md  docker-compose.yml  pyproject.toml  requirements.txt  streaming_client.js  streaming_demo.html  test_langraph.py
.claude/: CLAUDE.md  PRD.MD
.claude/agents/: docs-maintainer.md
app/: langraph_orchestrator.py  logstream.py  main.py  orchestrator.py
app/agents/: meta_analysis.py  pico_parser.py  pico_parser_enhanced.py  prisma_checker.py  rob_assessor.py
app/models/: schemas.py
app/services/: __init__.py  llm_client.py  llm_config.py  prompt_templates.py
app/utils/: pdf_ingest.py
docs/: ANALYSIS_METADATA_INTEGRATION.md  LANGRAPH_MULTI_AGENT.md  PHASE1_COMPLETE.md  README_LLM_INTEGRATION.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  state.ts  types.ts
frontend/src/components/: AgentStatusBoard.tsx  IssuesPanel.tsx  Layout.tsx  ManuscriptUploader.tsx  MetaPanel.tsx  ReviewController.tsx  StreamConsole.tsx
tests/: __init__.py  sample_manuscript.json  test_docx_extraction.py  test_docx_ingestion.py  test_docx_upload.py
tests/fixtures/: create_test_manuscripts.py
tests/integration/: test_end_to_end.py  test_full_review.py
tests/unit/: test_meta_analysis.py  test_pico_parser.py
