[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-sr-agents"
version = "0.1.0"
description = "Systematic Review Auditor - Multi-Agent Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "python-docx",
    "python-multipart"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pre-commit"
]
docs = [
    "mkdocs",
    "mkdocs-material"
]
nlp = [
    "spacy",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
